--- a/style.css
+++ b/style.css
@@ -42,9 +42,10 @@ ul{
     text-decoration: underline;
 }
 
-@media(min-width=600px){
-    .container{
-        height: fit-content;
-        max-height: 350px;
+@media (max-width: 480px) {
+    .container {
+        max-height: none; /* Allow height to expand fully on smaller screens */
+        width: 100%; /* Adjust the width to fit the screen */
+        padding: 5px; /* Reduce padding for smaller screens */
     }
 }
