--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     padding: 10px;
     width: 270px;
     max-height: 500px;
+    overflow-x: auto;
     overflow-y: auto; /* Add scroll if content exceeds the height */
 }
 
